<resources>
    <string name="app_name">Multi Bottoms</string>

    <string name="main_page_selected">%s page is selected</string>

    <string name="font_source_sans_pro_regular">fonts/SourceSansPro-Regular.ttf</string>
    <string name="font_source_sans_pro_semibold">fonts/SourceSansPro-SemiBold.ttf</string>

    <string name="menu_home">HOME</string>
    <string name="menu_explore">EXPLORE</string>
    <string name="menu_message">MESSAGE</string>
    <string name="menu_notification">NOTIFICATION</string>
    <string name="menu_account">ACCOUNT</string>
    <string name="reselected_message">Item %d is reselected.</string>
    <string name="notification_count">115</string>

    <string name="option_1">Main Activity</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="option_5">Option 5</string>
    <string name="option_6">Option 6</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="bag">Bag</string>
    <string name="favorite">Orders</string>
    <string name="profile">Profile</string>

    <string name="notification">Notify</string>
    <string name="likes">Favs</string>
    <string name="happy">Happy</string>
    <string name="room">Room</string>
    <string name="restaurant">Food</string>
    <string name="shop">Shop</string>
    <string name="photos">Pics</string>
    <string name="call">Call</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_store">Store</string>
    <string name="menu_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>
